--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <!-- partial:index.partial.html -->
 <nav class="main-nav">
 	<div class="main">
-		<h1>Kar<wbr>dna</h1>
+		<h1>Kar<wbr>dna
+   
+    </h1>
         <a class="a"><h2>3.1</h2></a>
         <a class="ab"><h2></h2></a>
         <h2 class="b">Med<wbr>ia</h2>
